updated dashboard - fixed collaps button - adjust the table

--- a/src/Menu/Menu.css
+++ b/src/Menu/Menu.css
@@ -1,5 +1,5 @@
 .list-group a:hover {
-  background-color: greenyellow;
+  background-color: rgba(255, 151, 151, 0.872);
   color: black;
   cursor: pointer;
 }
